--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -243,7 +243,7 @@ convergence:
     # Reuse global before_script to avoid duplicate code for python
     - *global-before-script
     # Install FLEXI
-    - rm -rf flexi || true
+    - rm -rf flexi
     - git clone --branch master --single-branch --depth 1 https://github.com/flexi-framework/flexi.git
     - cd flexi
     - cmake -B build
@@ -252,7 +252,7 @@ convergence:
     - cd ..
   script:
     # Generate Meshes
-    - rm -rf convergence_test || true
+    - rm -rf convergence_test
     - mkdir convergence_test
     - cd convergence_test
     - cp ../tutorials/5-02-convtest_flipped/parameter_FLIPPED_template_pyhope.ini .
@@ -295,75 +295,56 @@ convergence:
       def compute_expected_range(N):
           return N + 0.65, N + 1.35
 
+      # Process the results
+      def process_results(degree, data):
+          min_eoc, max_eoc = compute_expected_range(degree)
+          print(f"Checking EOCs for Polynomial Degree N={degree} (Expected: [{min_eoc}, {max_eoc}])")
+          results = []
+          for idx, (grid, eoc) in enumerate(data[1:]):
+              passed = min_eoc <= eoc <= max_eoc
+              results.append((grid, min_eoc, max_eoc, eoc, "PASS" if passed else ("(PASS)" if idx < len(data) - 2 else "FAIL")))
+          draw_table(results)
+          return all(r[4] == "PASS" for r in results[-1:])
+
+      # Draw the results as a table
+      def draw_table(results):
+          print("\n┌───────┬─────────┬─────────┬─────────┬────────┐")
+          print("│ Mesh  │   min   │   max   │  result │ Passed │")
+          print("├───────┼─────────┼─────────┼─────────┼────────┤")
+          for grid, min_eoc, max_eoc, result, passed in results:
+              pass_col = ( "\033[92m PASS \033[0m" if passed == "PASS" else ("\033[93m(PASS)\033[0m" if passed == "(PASS)" else "\033[91m FAIL \033[0m"))
+              print(f"│ {grid:^5} │ {min_eoc:^7.2f} │ {max_eoc:^7.2f} │ {result:^7.2f} │ {pass_col:^6} │")
+          print("└───────┴─────────┴─────────┴─────────┴────────┘\n")
+
       # Parse the log file
       try:
           with open(convfile, "r") as f:
               lines = f.readlines()
       except FileNotFoundError:
-          print(f"Error: File '{convfile}' not found.")
-          sys.exit(1)
+          sys.exit(f"Error: File '{convfile}' not found.")
 
       # Process the file
-      success = True
-      current_degree = None
-      current_data = []
+      success, current_degree, current_data = True, None, []
 
       for line in lines:
           line = line.strip()
           # Match polynomial degree header
           if line.startswith("=== Running Convergence Test") and "N=" in line:
-              parts = line.split("N=")
-              if len(parts) > 1:
-                  try:
-                      degree = int(parts[1].split()[0])
-                  except ValueError:
-                      continue
-                  # Process previous section if any
-                  if current_degree is not None and current_data:
-                      min_eoc, max_eoc = compute_expected_range(current_degree)
-                      print(f"Checking EOCs for Polynomial Degree N={current_degree} (Expected: [{min_eoc}, {max_eoc}])")
-                      for idx, (grid, eoc) in enumerate(current_data):
-                          if idx < 2:  # Skip the first two EOCs
-                              continue
-                          if min_eoc <= eoc <= max_eoc:
-                              print(f"  Grid {grid}: EOC={eoc:.2f} for N={current_degree} is within range")
-                          else:
-                              print(f"  Grid {grid}: EOC={eoc:.2f} for N={current_degree} is OUT of range")
-                              success = False
-                      current_data = []
-
-                  # Start a new section
-                  current_degree = degree
-              continue
-
+              if current_degree is not None:
+                  success &= process_results(current_degree, current_data)
+              try:
+                  current_degree = int(line.split("N=")[1].split()[0])
+              except ValueError:
+                  current_degree = None
+              current_data = []
           # Match grid data rows
-          if current_degree is not None and "║" in line:
-              columns = line.split("║")
-              if len(columns) > 2:
-                  try:
-                      grid = int(columns[0].strip())
-                      eoc = float(columns[2].strip())
-                      current_data.append((grid, eoc))
-                  except ValueError:
-                      continue
-
-      # Process the last section
-      if current_degree is not None and current_data:
-          min_eoc, max_eoc = compute_expected_range(current_degree)
-          print(f"Checking EOCs for Polynomial Degree N={current_degree} (Expected: [{min_eoc}, {max_eoc}])")
-          for idx, (grid, eoc) in enumerate(current_data):
-              if idx < 2:  # Skip the first two EOCs
-                  continue
-              if min_eoc <= eoc <= max_eoc:
-                  print(f"  Grid {grid}: EOC={eoc:.2f} for N={current_degree} is within range")
-              else:
-                  print(f"  Grid {grid}: EOC={eoc:.2f} for N={current_degree} is OUT of range")
-                  success = False
+          elif current_degree is not None and "║" in line:
+              try:
+                  grid, eoc = int(line.split("║")[0].strip()), float(line.split("║")[2].strip())
+                  current_data.append((grid, eoc))
+              except ValueError:
+                  pass
 
       # Final status
-      if success:
-          print("All checks completed successfully.")
-      else:
-          print("Some EOCs are out of range.")
-          sys.exit(1)
+      sys.exit(0 if success else print("Some EOCs are out of range.") or 1)
       EOF
