--- a/tutorials/5-03-convtest_mortar/parameter_template_pyhope.ini
+++ b/tutorials/5-03-convtest_mortar/parameter_template_pyhope.ini
@@ -1,7 +1,7 @@
 !================================================================================================================================= !
 ! OUTPUT
 !================================================================================================================================= !
-ProjectName  = 5-03-convtest_mortar                 ! Name of output files
+ProjectName  = CART_HEX_PERIODIC_<nElem>            ! Name of output files
 Debugvisu    = F                                    ! Launch the GMSH GUI to visualize the mesh
 OutputFormat = 0                                    ! Mesh output format (HDF5 VTK)
 checkElemJacobians = T                              ! Checks (scaled) Jacobian
@@ -17,23 +17,20 @@ doSortIJK    = F                                    ! Sort the mesh elements alo
 ! ===         left zone ===
 Corner       = (/-1,-1,-1   ,,-0.5,-1,-1   ,,-0.5,1,-1    ,,-1,1,-1    ,,-1,-1,1   ,,-0.5,-1,1   ,,-0.5,1,1    ,,-1,1,1/)
                                                     ! Corner node positions: (/ x_1,y_1,z_1, x_2,y_2,z_2,..... , x_8,y_8,z_8/)
-nElems       = (/4,8,8/)                            ! Number of elements in each direction
-! nElems       = (/2,4,4/)                            ! Number of elements in each direction
-BCIndex      = (/1,2,0,4,5,6/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
+nElems       = (/<nElem2>,<nElem>,<nElem>/)         ! Number of elements in each direction
+BCIndex      = (/1,2,7,4,5,6/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 ! ===       middle zone ===
 Corner       = (/-0.5,-1,1     ,, 0.5,-1,1    ,, 0.5,1,1     ,,-0.5,1,1      ,,-0.5,-1,-1   ,, 0.5,-1,-1  ,, 0.5,1,-1   ,,-0.5,1,-1/)
-nElems       = (/8,8,4/)                           ! Number of elements in each direction
-! nElems       = (/4,4,2/)                           ! Number of elements in each direction
-BCIndex      = (/6,2,0,4,0,1/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
+nElems       = (/<nElem>,<nElem>,<nElem2>/)         ! Number of elements in each direction
+BCIndex      = (/6,2,7,4,7,1/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 ! ===        right zone ===
 Corner       = (/0.5,-1,-1  ,, 1,-1,-1   ,,1,1,-1    ,,0.5,1,-1    ,,0.5,-1,1   ,,1,-1,1   ,,1,1,1    ,,0.5,1,1/)
-nElems       = (/4,8,8/)                           ! Number of elements in each direction
-! nElems       = (/2,4,4/)                           ! Number of elements in each direction
-BCIndex      = (/1,2,3,4,0,6/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
+nElems       = (/<nElem2>,<nElem>,<nElem>/)         ! Number of elements in each direction
+BCIndex      = (/1,2,3,4,7,6/)                      ! Indices of Boundary Conditions for six Boundary Faces (z-,y-,x+,y+,x-,z+)
 ElemType     = 108                                  ! Element type (108: Hexahedral)
 
 !================================================================================================================================= !
@@ -44,13 +41,15 @@ BoundaryType = (/1,0,0,3/)                         ! (/ Type, curveIndex, State,
 BoundaryName = BC_y-                               ! BC index 2
 BoundaryType = (/1,0,0,2/)
 BoundaryName = BC_x+                               ! BC index 3
-BoundaryType = (/1,0,0,-1/)
+BoundaryType = (/2,0,0,-1/)
 BoundaryName = BC_y+                               ! BC index 4
 BoundaryType = (/1,0,0,-2/)
 BoundaryName = BC_x-                               ! BC index 5
-BoundaryType = (/1,0,0,1/)
+BoundaryType = (/2,0,0,1/)
 BoundaryName = BC_z+                               ! BC index 6
 BoundaryType = (/1,0,0,-3/)
+BoundaryName = inner                               ! BC index 7
+BoundaryType = (/0,0,0,0/)
 vv = (/2.,0.,0./)                                  ! Vector for periodic BC
 vv = (/0.,2.,0./)                                  ! Vector for periodic BC
 vv = (/0.,0.,2./)                                  ! Vector for periodic BC
