--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -223,8 +223,12 @@ convergence:
   image: registry.iag.uni-stuttgart.de/flexi/codes/pyhope/nrg-fedora_41-x86_64
   artifacts:
     paths:
-      - convergence.log
+      - convergence_artifacts.log
   script:
+    - | # Literal YAML multiline block scalar indicator
+      artifact_file="convergence_artifacts.log"
+      rm $artifact_file || true
+      touch $artifact_file
     - directories=("5-02-convtest_flipped" "5-03-convtest_mortar") # List of directories to process
     - | # Literal YAML multiline block scalar indicator
       for dir in "${directories[@]}"; do
@@ -249,16 +253,18 @@ convergence:
           # Clean up the temporary file
           rm "$temp_file"
         done
-        # Clean-up the log file
-        rm -f ../convergence.log
         # Call convergence script
         for N in {1..4}; do
           echo ""
           echo "=== Running Convergence Test N=$N ===" | tee -a ../convergence.log
           python3 /flexi/tools/convergence_test/convergence_grid --N $N --dim 3 --procs 1 /flexi/build/bin/flexi parameter_flexi.ini | tee -a ../convergence.log
         done
-        # Analyze convergence behavior using a simple python script
         cd ..
+        # Merge convergence.log for artifacts
+        echo "===== Processing Folder: $dir =====" >> "$artifact_file"
+        cat "convergence.log" >> "$artifact_file"
+        echo "" >> "$artifact_file"
+        # Analyze convergence behavior using a simple python script
         python3 << EOF # Collapsed multi-line command
       import sys
 
@@ -327,4 +333,7 @@ convergence:
       # Final status
       sys.exit(0 if success else print("Some EOCs are out of range.") or 1)
       EOF
+
+        # Clean-up the log file
+        rm -f convergence.log
       done
